execution timer; fix records number overflow

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -108,6 +108,10 @@ body{
     padding-top: 5px;
 }
 
+.output-message {
+    padding-left: 10px;
+}
+
 .ace_editor{
     width: 100%;
     height: 100%;
